[metadata]
name = consul-vault-api
version = 2022.1.1
author = Konstantin Barskiy
author_email = barskykd@yandex.ru
description = Api for hashicorp consul and vault
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/barskykd/py-consul-vault-api
project_urls =
    Bug Tracker = https://github.com/barskykd/py-consul-vault-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    certifi
    dataclass-json@git+https://github.com/barskykd/py-dataclass-json.git@a49347fc787f7017e2778209a30134541ab8c69c
    requests==2.26.0

[options.packages.find]
where = src